CMParts: Network Traffic [3/3]
Change-Id: Id5280a52e4d06c3f4752beb7cae708da54e9a60b

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -101,4 +101,10 @@
 
     </PreferenceCategory>
 
+    <PreferenceScreen
+        android:fragment="org.cyanogenmod.cmparts.statusbar.NetworkTrafficSettings"
+        android:key="nettraffic_settings"
+        android:title="@string/nettraffic_settings_title"
+        android:summary="@string/nettraffic_settings_summary" />
+
 </PreferenceScreen>
